[package]
name = "boof"
version = "1.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "A strict superset of Brainfuck"
keywords = ["brainfuck", "bf"]
license = "MIT"
homepage = "https://github.com/aslilac/boof"
repository = "https://github.com/aslilac/boof"
documentation = "https://docs.rs/crate/boof"
edition = "2021"
